# rust_dashboard

./: Cargo.toml  README.md
src/: main.rs
templates/: 404.html.tera  app.html.tera  data-load.html.tera  index.html.tera
templates/js/demo/: dashboard-generator.js  load-data.js
